--- a/0.IntroBayesian.Rmd
+++ b/0.IntroBayesian.Rmd
@@ -8,20 +8,16 @@ output: learnr::tutorial
 runtime: shiny_prerendered
 ---
 
-This course is available at [Zenodo](http://doi.org/10.5281/zenodo.1435503).
+These learning resources are available at [Zenodo](http://doi.org/10.5281/zenodo.1435503).
 
 
 
-## Setup (just for information)
+## Setup (tl;dr)
 
 ```{r setup, include=TRUE}
 library(learnr)
-
 # function to calculate likelihood for the coin toss experiment
-flip_coin_likelihood <- function(p,h,t){
-  likelihood <- choose(h+t,h) * p^h * (1-p)^t
-  return (list(p=p,l=likelihood))
-}
+source("coin_toss.R", local = TRUE)
 ```
 
 
@@ -103,6 +99,8 @@ plot(likelihood_profile$p,
      xlab = "p", ylab = "Likelihood", type = "l", col="red")
 ```
 
+Note: function `flip_coin_likelihood()` has been loaded with `source("coin_toss.R")` in the setup and is available for all exercise.
+
 ### Exercise 3
 
 From the likelihood profile we can obtain which is the value of $p$ that explain the best the observed data: the [maximum likelihood estimate](http://en.wikipedia.org/wiki/Maximum_likelihood_estimation). Which is the MLE estimate  of $p$ ($\hat{p}$):
@@ -125,7 +123,7 @@ p_hat
 ```
 
 
-For this simple model it is possible to derive an analytical solution for the maximum likelihood estimator of $p$:
+For this simple model there is an analytical solution for the maximum likelihood estimator of $p$:
 
 \[ \hat{p}=h/(h+t) \]
 
