--- a/1.ABC.Rmd
+++ b/1.ABC.Rmd
@@ -2,137 +2,28 @@
 ######################################
 # Click on "Run Document" in RStudio #
 ######################################
-title: "Approximate Bayesian Computation"
+title: "The Three Approximations in ABC"
 author: "Miguel de Navascués"
 output: learnr::tutorial
 runtime: shiny_prerendered
 ---
 
-This course is available at [Zenodo](http://doi.org/10.5281/zenodo.1435503).
+These learning resources are available at [Zenodo](http://doi.org/10.5281/zenodo.1435503).
 
-
-
-## Setup (just for information)
+## Setup (tl;dr)
 
 ```{r setup, include=TRUE}
 library(learnr)
+# function ms() (Hudson's coalescent simulator)
 library(phyclust, quietly=T)
-library(abc, quietly=T)
-
+# functions for ABC
+suppressMessages(library(abc, quietly=T))
 # functions for the coin toss experiment analysis
-flip_coin_likelihood <- function(p,h,t){
-  likelihood <- choose(h+t,h) * p^h * (1-p)^t
-  return (list(p=p,l=likelihood))
-}
-
-flip_coin_likelihood_approx <- function(p,h,t,num_of_sim){
-  likelihood <- array(dim=length(p))
-  for (i in seq_along(p)){
-    likelihood[i] <- sum(rbinom(n=num_of_sim,size=h+t,prob=p[i])==h)/num_of_sim  
-  }
-  return (list(p=p,l=likelihood))
-}
-
-flip_coin_posterior_approx <- function(h,t,a,b,num_of_sim){
-  p_prime <- rbeta(num_of_sim,a,b)
-  d_prime <- rbinom(num_of_sim,h+t,p_prime)
-  p_prime_accept <- p_prime[which(d_prime==h)]
-  d_prime_accept <- d_prime[which(d_prime==h)]
-  return(list(p_prime=p_prime,
-              d_prime=d_prime,
-              p_prime_accept=p_prime_accept,
-              d_prime_accept=d_prime_accept))
-}
-
-
-# for function read.ms.output()
+source("coin_toss.R", local = TRUE)
+# function read.ms.output()
 source("readms.output.R", local =T)
-
 # functions to calculate summary statistics from ms output
-S <- function(a) {return(a$segsites)}
-
-NH <- function(a) {
-  NH<-vector(length=a$nreps)
-  for(i in seq_len(a$nreps)) {
-    NH[i] <- nrow(unique(a$gametes[[i]]))
-  }
-  return(NH)
-}
-
-PI <- function(a) {
-  PI<-vector(mode='numeric', length=a$nreps)
-  for(i in seq_len(a$nreps)) {
-    if(a$segsites[i]>0){
-      for(j in seq_len(a$segsites[i])) {
-         if(a$segsites[i]>1) {
-          loc<-sum(a$gametes[[i]][,j])
-        } else {
-          loc<-sum(a$gametes[[i]])
-        }
-        PI[i] <- PI[i] + 2*loc*(a$nsam-loc)
-      }
-    }
-  }
-  return(PI/(a$nsam*(a$nsam-1)))
-}
-
-thetaW <- function(a) {
-  a1<-sum(1/(1:(a$nsam-1)))
-  return(a$segsites/a1)
-}
-
-TajimaD <- function(a) {
-  a1<-sum(1/(1:(a$nsam-1)))
-  a2<-sum(1/((1:(a$nsam-1))^2))
-  b1<-(a$nsam+1)/3/(a$nsam-1)
-  b2<-2*(a$nsam^2+a$nsam+3)/(9*a$nsam*(a$nsam-1))
-  c1<-b1-1/a1
-  c2<-b2-(a$nsam+2)/(a1*a$nsam)+a2/(a1^2)
-  temp <- c1/a1*a$segsites + c2/(a1^2+a2)*a$segsites*(a$segsites-1)
-  return( (PI(a)-thetaW(a))/sqrt(temp) )
-}
-
-FuLiD<-function(a) {
-  thetaS1_res <- thetaS1(a)
-  a1<-sum(1/(1:(a$nsam-1)))
-  a2<-sum(1/((1:(a$nsam-1))^2))
-  c<-(2*a$nsam*a1-4*(a$nsam-1))/((a$nsam-1)*(a$nsam-2))
-  vD<-1+a1^2/(a2+a1^2)*(c-(a$nsam+1)/(a$nsam-1))
-  uD<-a1-1-vD
-  fuliD<-vector(mode='numeric',length=a$nreps)
-  for(i in 1:a$nreps) {
-    if(a$segsites[i]) {
-      locS<-a$segsites[i]
-      loc<-uD*locS+vD*locS^2
-      fuliD[i]<-(locS-a1*thetaS1_res[i])/sqrt(loc)
-    }
-  }
-  fuliD
-}
-
-thetaS1<-function(a) {
-  thetaS1<-vector(mode='numeric', length=a$nreps)
-  for(i in 1:a$nreps) {
-    if(a$segsites[i]) {
-      for(j in 1:a$segsites[i]) {
-        if(a$segsites[i]>1) {
-          if(sum(a$gametes[[i]][,j])==1) {
-            thetaS1[i]<-thetaS1[i]+1
-          }
-        } else {
-          if(sum(a$gametes[[i]])==1) {
-            thetaS1[i]<-thetaS1[i]+1
-          }
-        }
-      }
-    }
-  }
-  thetaS1
-}
-
-
-
-
+source("ms_sumstats.R", local =T)
 ```
 
 ## Approximation 1: Simulation
