--- a/1.ABC.Rmd
+++ b/1.ABC.Rmd
@@ -337,23 +337,13 @@ saveRDS(target,file="target.RDS")
 Apply the rejection algorithm using one summary statistic. Start with the number of segregating sites and the number of haplotypes (`S`, `NH`), then try $\pi$ (`PI`).
 
 ```{r rejection_algortihm_sumstats, exercise=TRUE, exercise.lines=35}
-target <- data.frame(S  = c(50,23),
-                     PI = c(11.56163,1.354286),
-                     NH = c(21,18),
-                     TD = c(0.123358,-2.386268),
-                     FLD= c(-1.160349,-4.354524),
-                     row.names = c("octomanati","rinocaracol"))
+target    <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/target.RDS")
 ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
 
 ```
 
 ```{r rejection_algortihm_sumstats-hint}
-target <- data.frame(S  = c(50,23),
-                     PI = c(11.56163,1.354286),
-                     NH = c(21,18),
-                     TD = c(0.123358,-2.386268),
-                     FLD= c(-1.160349,-4.354524),
-                     row.names = c("octomanati","rinocaracol"))
+target    <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/target.RDS")
 ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
 target
 head(ref_table)
@@ -361,12 +351,7 @@ head(ref_table)
 
 
 ```{r rejection_algortihm_sumstats-solution}
-target <- data.frame(S  = c(50,23),
-                     PI = c(11.56163,1.354286),
-                     NH = c(21,18),
-                     TD = c(0.123358,-2.386268),
-                     FLD= c(-1.160349,-4.354524),
-                     row.names = c("octomanati","rinocaracol"))
+target    <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/target.RDS")
 ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
 
 num_of_sims <- 10000 # use a subset of simulation from a total of 1 000 000
@@ -433,12 +418,7 @@ library(abc)
 Using function `abc()` (from `abc` package), apply the rejection algorithm using one summary statistic. Start with the number of segregating sites and the number of haplotypes (`S`, `NH`), then try $\pi$ (`PI`). Explore the effect of changing the tolerance level (proportion of simulations kept), try values `0.5` and `0.001`. What would we get as posterior using tolerance values close to `1`?
 
 ```{r rejection_algortihm_tolerance, exercise=TRUE, exercise.lines=35}
-target <- data.frame(S  = c(50,23),
-                     PI = c(11.56163,1.354286),
-                     NH = c(21,18),
-                     TD = c(0.123358,-2.386268),
-                     FLD= c(-1.160349,-4.354524),
-                     row.names = c("octomanati","rinocaracol"))
+target    <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/target.RDS")
 ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
 
 num_of_sims <- 10000 # use a subset of simulation from a total of 1 000 000
